--- a/src/less/home.less
+++ b/src/less/home.less
@@ -13,8 +13,8 @@
 
     #view-button {
       position: fixed;
-      top: 105px;
-      left: 75px;
+      top: 75px;
+      left: 95px;
 
       font-size: 1.4rem;
       letter-spacing: 2px;
